{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "8bc02a01-920a-40d2-b7b0-8549c632fda7",
            "actions": [
                {
                    "name": "SpearThrowing",
                    "type": "Button",
                    "id": "1f29c33f-6d39-4bd3-9bfc-0a8e3b123a70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6fc90c62-1472-4da8-823b-22ee4bf49607",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5b6c0a1-b2e2-4c26-84f3-32d7bcbe498a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Windows",
                    "action": "SpearThrowing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79324859-ad0d-4a46-8ab4-62fb069f3201",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Windows",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Windows",
            "bindingGroup": "Windows",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}